[package]
name = "git-cache"
version = "0.1.0"
edition = "2021"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]

description = "A git clone cache"
repository = "https://github.com/kaspar030/git-cache-rs"
homepage = "https://github.com/kaspar030/git-cache-rs"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.79"
camino = { version = "1.1.6", features = ["serde"] }
clap = { version = "4.4.18", features = ["cargo", "env", "string"] }
shellexpand = "3.1.0"
url = "2.5.0"
