[package]
name = "git-cache"
version = "0.2.1"
edition = "2021"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]

description = "A git clone cache"
repository = "https://github.com/kaspar030/git-cache-rs"
homepage = "https://github.com/kaspar030/git-cache-rs"
license = "Apache-2.0"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
anyhow = "1.0.86"
camino = { version = "1.1.7", features = ["serde"] }
clap = { version = "4.5.7", features = ["cargo", "env", "string"] }
derive_builder = "0.20.0"
fd-lock = "4.0.2"
shellexpand = "3.1.0"
url = "2.5.2"

[profile.release]
strip=true
lto=true

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-name = "{{prefix}}{{version}}"

pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/kaspar030/git-cache-rs/compare/{{tag_name}}...HEAD", exactly=1},
]
